# keikaku

./: .clang-format  CMakeLists.txt  README.md  TODO.todo  kei.cpp  main.cpp
include/backend/: machine_codegen_interface.hpp  machine_description.hpp  x86_machine_codegen.hpp  x86_target.hpp
include/codegen/: IR.hpp  codegen.hpp  ir_visitor.hpp  pass_manager.hpp
include/frontend/: parser.hpp  tokenizer.hpp
include/util/: util.hpp
lib/: CMakeLists.txt
lib/backend/: CMakeLists.txt  machine_description.cpp  x86_machine_codegen.cpp
lib/codegen/: CMakeLists.txt  IR.cpp  codegen.cpp  ir_visitor.cpp  pass_manager.cpp
lib/frontend/: CMakeLists.txt  parser.cpp  tokenizer.cpp
lib/util/: CMakeLists.txt  util.cpp
testing/: CMakeLists.txt
testing/codegen/: CMakeLists.txt  ir_visitor_test.cpp
testing/frontend/: CMakeLists.txt  integration_test.cpp  parser_test.cpp  tokenizer_test.cc
